--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Install dependencies
+      run: apt install --yes libgtk-4-dev build-essential
     - name: Build
       run: cargo build --verbose
     - name: Run tests
